# KPIReport

./: CMakeLists.txt  README.md  __main__.py  main.cpp
OutingsCSV/: Outing1.csv  Outing2.csv  Outing3.csv  Outing4.csv
csv/: dados.csv
include/: cars.h  constants.h  events.cpp  events.h  functions.cpp  functions.h  queries.h
includes/: functions.cpp  functions.h
lib/: events.cpp
src/: dashboard.py
